--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,7 @@ chrono = "0.4.31"
 clap = "4.2"
 console_error_panic_hook = "0.1"
 dotenvy = "0.15.0"
+enumset = "1.1.5"
 futures = "0.3"
 git2 = "0.13"
 gix = "0.58"
