Provide a more basic enforcer
- This version will require more data but will be much more explicit as
  all the grants must be done via the database and a correct selection
  of the relevant records to generate the Policy.

--- a/pmrcore/Cargo.toml
+++ b/pmrcore/Cargo.toml
@@ -10,7 +10,7 @@ async-trait = { workspace = true }
 bytemuck = { workspace = true, optional = true }
 chrono = { workspace = true, optional = true }
 clap = { workspace = true, features = ["derive", "env"], optional = true }
-enumset = { workspace = true }
+enumset = { workspace = true, features = ["serde"] }
 gix = { workspace = true, optional = true }
 log = { workspace = true }
 mime_guess = { workspace = true, optional = true }
