--- a/pmrac/Cargo.toml
+++ b/pmrac/Cargo.toml
@@ -17,6 +17,7 @@ log = { workspace = true }
 pmrcore = { workspace = true, features = [ "display" ] }
 pmrmodel = { workspace = true, optional = true }
 pmrrbac = { workspace = true }
+serde_json = { workspace = true, optional = true }
 sqlx = { workspace = true, features = ["sqlite"], optional = true }
 stderrlog = { workspace = true, optional = true }
 thiserror = { workspace = true }
@@ -41,6 +42,7 @@ bin = [
     "pmrcore/clap",
     "pmrcore/display",
     "pmrmodel",
+    "serde_json",
     "sqlx",
     "stderrlog",
 ]
