Major refactor relating to the enforcers
- Provide a common trait so that both existing enforcers can implement.
- The pmrrbac crate has been broken up, and absorbed the implementation
  of the enforcer from the pmrcore package.
- Have the Casbin version be optional, thus the simpler version is now
  the default, and be its own module.
- Have the builder interface more or less match, and the casbin version
  be a conversion to the new one.
- The genpolicy::Policy struct will also contain the original agent that
  produced that policy.
- The PolicyEnforcer's enforcement will check that agent and resource
  matches.

--- a/pmrac/Cargo.toml
+++ b/pmrac/Cargo.toml
@@ -10,7 +10,7 @@ async-trait = { workspace = true, optional = true }
 anyhow = { workspace = true, optional = true }
 argon2 = { workspace = true, features = ["std"] }
 axum-login = { workspace = true, optional = true }
-casbin = { workspace = true }
+casbin = { workspace = true, optional = true }
 clap = { workspace = true, features = ["derive", "env"], optional = true }
 dotenvy = { workspace = true, optional = true }
 log = { workspace = true }
@@ -45,6 +45,10 @@ bin = [
     "serde_json",
     "sqlx",
     "stderrlog",
+]
+casbin = [
+    "dep:casbin",
+    "pmrrbac/casbin",
 ]
 
 [lib]
