Change UserRole to AgentRole; anon PolicyEnforcer
- Change the UserRole to AgentRole, but for now we leave the underlying
  schema alone as that's another invasive change, and we don't currently
  have a direct need to give arbitrary roles to the anonymous agent.
- Rename to build_with_policy to better reflect the name of the type and
  how it's not just about resource (it's actually Agent + Resource but
  this is rather verbose).

--- a/pmrrbac/Cargo.toml
+++ b/pmrrbac/Cargo.toml
@@ -10,13 +10,17 @@ log = { workspace = true }
 casbin = { workspace = true, optional = true }
 pmrcore = { workspace = true, features = ["display"] }
 thiserror = { workspace = true }
-tokio = { workspace = true, features = ["fs", "io-util", "macros", "rt"] }
+tokio = { workspace = true, features = ["fs", "io-util", "macros", "rt"], optional = true }
 
 [dev-dependencies]
 anyhow = { workspace = true }
 serde_json = { workspace = true }
+tokio = { workspace = true, features = ["fs", "io-util", "macros", "rt"] }
 
 [features]
-casbin = ["dep:casbin"]
+casbin = [
+    "dep:casbin",
+    "dep:tokio",
+]
 
 [lib]
