--- a/pmrac/Cargo.toml
+++ b/pmrac/Cargo.toml
@@ -14,7 +14,7 @@ casbin = { workspace = true, optional = true }
 clap = { workspace = true, features = ["derive", "env"], optional = true }
 dotenvy = { workspace = true, optional = true }
 log = { workspace = true }
-pmrcore = { workspace = true, features = [ "display" ] }
+pmrcore = { workspace = true, features = [ "display", "server" ] }
 pmrmodel = { workspace = true, optional = true }
 pmrrbac = { workspace = true }
 serde_json = { workspace = true, optional = true }
