--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,10 +55,10 @@ html-escape = "0.2.13"
 http = "1"
 itertools = "0.11"
 js-sys = "0.3.69"
-leptos = "0.7.0-rc0"
-leptos_axum = "0.7.0-rc0"
-leptos_meta = "0.7.0-rc0"
-leptos_router = "0.7.0-rc0"
+leptos = "0.7.0-rc1"
+leptos_axum = "0.7.0-rc1"
+leptos_meta = "0.7.0-rc1"
+leptos_router = "0.7.0-rc1"
 log = "0.4"
 mime_guess = "2.0.4"
 mockall = "0.10.2"
@@ -83,7 +83,7 @@ tower = "0.4"
 tower-http = "0.5"
 tower-sessions = "0.13.0"
 tracing = "0.1"
-wasm-bindgen = "=0.2.93"
+wasm-bindgen = "0.2.95"
 web-sys = "0.3.69"
 
 # Defines a size-optimized profile for the WASM bundle in release mode
