--- a/pmrapp/Cargo.toml
+++ b/pmrapp/Cargo.toml
@@ -11,6 +11,7 @@ ammonia = { workspace = true, optional = true }
 anyhow = { workspace = true, optional = true }
 axum = { workspace = true, optional = true }
 axum-login = { workspace = true, optional = true }
+chrono = { workspace = true }
 clap = { workspace = true, features = ["derive", "env"], optional = true }
 console_error_panic_hook = { workspace = true }
 dotenvy = { workspace = true, optional = true }
