--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,10 +56,10 @@ html-escape = "0.2.13"
 http = "1"
 itertools = "0.11"
 js-sys = "0.3.69"
-leptos = "0.7.0-rc1"
-leptos_axum = "0.7.0-rc1"
-leptos_meta = "0.7.0-rc1"
-leptos_router = "0.7.0-rc1"
+leptos = "0.7.0"
+leptos_axum = "0.7.0"
+leptos_meta = "0.7.0"
+leptos_router = "0.7.0"
 log = "0.4"
 mime_guess = "2.0.4"
 mockall = "0.10.2"
