Have the new session type provide the methods
- Move the standalone functions that depend on the leptos integration to
  methods under the session type.
- Shuffle the AuthError to the error module.
- Have the existing usage of the functions to use the methods
- Moving the exposure server function to an axum route.

--- a/pmrapp/Cargo.toml
+++ b/pmrapp/Cargo.toml
@@ -31,6 +31,7 @@ pmrrbac = { workspace = true }
 pmrrepo = { workspace = true, optional = true }
 pmrtqs = { workspace = true, optional = true }
 serde = { workspace = true, features = ["derive"] }
+serde_urlencoded = { workspace = true }
 sqlx = { workspace = true, features = ["sqlite"], optional = true }
 stderrlog = { workspace = true, optional = true }
 tokio = { workspace = true, features = ["rt-multi-thread"], optional = true }
