--- a/Cargo.toml
+++ b/Cargo.toml
@@ -69,6 +69,7 @@ paw = "1.0"
 rand = "0.8.5"
 serde = "1.0.59"
 serde_json = "1.0.59"
+serde_urlencoded = "0.7.1"
 sqlx = "0.8.0"
 stderrlog = "0.5.1"
 structopt = "0.3"
