Wizard field update axum route
- Have the updater in the handle
- Have the form data parser be part of the axum route for feeding data
  into the function provided by the handle
- There was some issues with lifetime but were melted away.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,7 +54,7 @@ gix = "0.58"
 gloo-utils = "0.2.0"
 html-escape = "0.2.13"
 http = "1"
-itertools = "0.11"
+itertools = "0.14"
 js-sys = "0.3.69"
 leptos = "0.7.0"
 leptos_axum = "0.7.0"
@@ -67,6 +67,7 @@ num_enum = "0.6.1"
 parking_lot = "0.12"
 paw = "1.0"
 rand = "0.8.5"
+regex = "1.11.1"
 serde = "1.0.59"
 serde_json = "1.0.59"
 serde_urlencoded = "0.7.1"
