--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,7 +39,7 @@ argon2 = "0.5.3"
 async-recursion = "1.0.0"
 async-std = "1.5.0"
 async-trait = "0.1.50"
-axum = "0.7"
+axum = "0.8"
 axum-login = "0.16.0"
 bytemuck = "1.19.0"
 casbin = "2.5.0"
@@ -57,10 +57,11 @@ html-escape = "0.2.13"
 http = "1"
 itertools = "0.14"
 js-sys = "0.3.69"
-leptos = "0.7.7"
-leptos_axum = "0.7.7"
-leptos_meta = "0.7.7"
-leptos_router = "0.7.7"
+leptos = "0.8.0-beta"
+leptos_axum = "0.8.0-beta"
+leptos_meta = "0.8.0-beta"
+leptos_router = "0.8.0-beta"
+leptos_sync_ssr = "0.1.0-beta"
 log = "0.4"
 mime_guess = "2.0.4"
 mockall = "0.10.2"
