--- a/pmrapp/Cargo.toml
+++ b/pmrapp/Cargo.toml
@@ -24,6 +24,7 @@ leptos = { workspace = true, features = ["rkyv"] }
 leptos_axum = { workspace = true, optional = true }
 leptos_meta = { workspace = true }
 leptos_router = { workspace = true }
+leptos_sync_ssr = { workspace = true, features = ["portlet"] }
 log = { workspace = true, optional = true }
 pmrac = { workspace = true, optional = true, features = ["axum-login"] }
 pmrcore = { workspace = true }
@@ -80,6 +81,7 @@ ssr = [
     "leptos/ssr",
     "leptos_meta/ssr",
     "leptos_router/ssr",
+    "leptos_sync_ssr/ssr",
     "dep:tracing",
 ]
 
