--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,11 +57,11 @@ html-escape = "0.2.13"
 http = "1"
 itertools = "0.14"
 js-sys = "0.3.69"
-leptos = "0.8.0-beta"
-leptos_axum = "0.8.0-beta"
-leptos_meta = "0.8.0-beta"
-leptos_router = "0.8.0-beta"
-leptos_sync_ssr = "0.1.0-beta"
+leptos = "0.8.0"
+leptos_axum = "0.8.0"
+leptos_meta = "0.8.0"
+leptos_router = "0.8.0"
+leptos_sync_ssr = "0.1.0"
 log = "0.4"
 mime_guess = "2.0.4"
 mockall = "0.10.2"
