Generate the Collection+JSON listing for workspace.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,7 @@ async-recursion = "1.0.0"
 async-std = "1.5.0"
 async-trait = "0.1.50"
 axum = "0.8"
+axum-extra = "0.10.0"
 axum-login = "0.16.0"
 bytemuck = "1.19.0"
 casbin = "2.5.0"
