--- a/pmrapp/Cargo.toml
+++ b/pmrapp/Cargo.toml
@@ -10,9 +10,11 @@ crate-type = ["cdylib", "rlib"]
 ammonia = { workspace = true, optional = true }
 anyhow = { workspace = true, optional = true }
 axum = { workspace = true, optional = true }
+axum-extra = { workspace = true, optional = true }
 axum-login = { workspace = true, optional = true }
 chrono = { workspace = true }
 clap = { workspace = true, features = ["derive", "env"], optional = true }
+collection_json = { workspace = true, optional = true }
 console_error_panic_hook = { workspace = true }
 dotenvy = { workspace = true, optional = true }
 gloo-timers = { workspace = true, features = ["futures"] }
@@ -61,8 +63,10 @@ ssr = [
     "dep:ammonia",
     "dep:anyhow",
     "dep:axum",
+    "dep:axum-extra",
     "dep:axum-login",
     "dep:clap",
+    "dep:collection_json",
     "dep:dotenvy",
     "dep:itertools",
     "dep:log",
