--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 members = [
     "collection_json",
+    "pmr2-migration",
     "pmrac",
     "pmrapp",
     "pmrapp/e2e",
@@ -16,6 +17,7 @@ members = [
 ]
 default-members = [
     "collection_json",
+    "pmr2-migration",
     "pmrac",
     "pmrctrl",
     "pmrcore",
@@ -31,6 +33,7 @@ resolver = "2"
 
 [workspace.dependencies]
 collection_json = { path = "./collection_json", version = "0.0.1" }
+pmr2-migration = { path = "./pmr2-migration", version = "0.0.1" }
 pmrac = { path = "./pmrac", version = "0.0.1" }
 pmrapp = { path = "./pmrapp", version = "0.0.1" }
 pmrctrl = { path = "./pmrctrl", version = "0.0.1" }
