Allow import/export in toml for pmrctrl.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -95,6 +95,7 @@ test-binary = "3.0.2"
 textwrap-macros = "0.3.0"
 thiserror = "1.0"
 time = "0.3.36"
+toml = "0.9.5"
 tokio = "1.35"
 tokio-stream = "0.1.5"
 tokio-util = "0.7.11"
