--- a/pmrctrl/Cargo.toml
+++ b/pmrctrl/Cargo.toml
@@ -23,6 +23,7 @@ serde_json = { workspace = true }
 stderrlog = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true, features = ["sync", "fs"] }
+toml = { workspace = true }
 
 [dev-dependencies]
 anyhow = { workspace = true }
