Hook up processed data backend to platform

--- a/.env
+++ b/.env
@@ -2,8 +2,12 @@
 export LEPTOS_SITE_ADDR="127.0.0.1:9380"
 export LEPTOS_SITE_ROOT="site"
 
+# export PMR_ANONYMOUS_READER=true
+# export PMR_AUTO_CREATE_DB=true
+
 export PMRAC_DB_URL=sqlite:pmrac.db
 export PMRAPP_DB_URL=sqlite:pmrapp.db
+export PMRPC_DB_URL=sqlite:pmrpc.db
 export PMRTQS_DB_URL=sqlite:pmrtqs.db
 
 export PMR_REPO_ROOT=./repo
