--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "pmr2-migration",
     "pmrac",
     "pmrapp",
+    "pmrbin",
     "pmrapp/e2e",
     "pmrctrl",
     "pmrcore",
@@ -36,6 +37,7 @@ collection_json = { path = "./collection_json", version = "0.0.1" }
 pmr2-migration = { path = "./pmr2-migration", version = "0.0.1" }
 pmrac = { path = "./pmrac", version = "0.0.1" }
 pmrapp = { path = "./pmrapp", version = "0.0.1" }
+pmrbin = { path = "./pmrbin", version = "0.0.1" }
 pmrctrl = { path = "./pmrctrl", version = "0.0.1" }
 pmrdb = { path = "./pmrdb", version = "0.0.1" }
 pmrdb_sqlite = { path = "./pmrdb_sqlite", version = "0.0.1" }
