--- a/pmrbin/Cargo.toml
+++ b/pmrbin/Cargo.toml
@@ -7,12 +7,15 @@ edition = "2024"
 anyhow = { workspace = true }
 clap = { workspace = true, features = ["derive", "env"] }
 dotenvy = { workspace = true }
+oxigraph = { workspace = true }
 pmrcore = { workspace = true }
 pmrctrl = { workspace = true }
 pmrdb = { workspace = true }
 pmrmodel = { workspace = true }
 stderrlog = { workspace = true }
+thiserror = { workspace = true }
 tokio = { workspace = true, features = ["sync", "fs"] }
+xee-xpath = { workspace = true }
 
 [features]
 sqlite = [
