--- a/profiles/env.example
+++ b/profiles/env.example
@@ -1,3 +1,3 @@
-PMR2_BUILDOUT_DIR=/path/to/pmr2.buildout
-CMLIBS_VENV_DIR=/path/to/cmlibs
-PMRPLATFORM_DIR=/path/to/pmrplatform
+export PMR2_BUILDOUT_DIR=/path/to/pmr2.buildout
+export CMLIBS_VENV_DIR=/path/to/cmlibs
+export PMRPLATFORM_DIR=/path/to/pmrplatform
