Integrate the new binary into profiles
- For the new RDF indexing capability, amend the CellML profile to
  include that.

--- a/profiles/cellml_profile.toml
+++ b/profiles/cellml_profile.toml
@@ -219,3 +219,52 @@ choice_fixed = true
 choice_source = "working_dir"
 choices = []
 
+[[view_task_templates]]
+view_key = "references"
+description = "References"
+
+[view_task_templates.task_template]
+bin_path = "${PMRPLATFORM_DIR}/target/release/pmr-citation"
+version_id = "0.0.1"
+
+[[view_task_templates.task_template.args]]
+flag = "rdfxml"
+flag_joined = false
+flag_omit_when_null = false
+choice_fixed = false
+
+[[view_task_templates.task_template.args]]
+flag = "index"
+flag_joined = false
+flag_omit_when_null = false
+choice_fixed = false
+
+[[view_task_templates.task_template.args]]
+flag = "--input-path="
+flag_joined = true
+flag_omit_when_null = false
+prompt = ""
+default = "workspace_file_path"
+choice_fixed = true
+choice_source = "workspace_file_path"
+choices = []
+
+[[view_task_templates.task_template.args]]
+flag = "--exposure-id="
+flag_joined = true
+flag_omit_when_null = false
+prompt = ""
+default = "exposure_id"
+choice_fixed = true
+choice_source = "exposure_id"
+choices = []
+
+[[view_task_templates.task_template.args]]
+flag = "--exposure-path="
+flag_joined = true
+flag_omit_when_null = false
+prompt = ""
+default = "exposure_file"
+choice_fixed = true
+choice_source = "exposure_file"
+choices = []
