--- a/profiles/citation.toml
+++ b/profiles/citation.toml
@@ -1,6 +1,6 @@
 [profile]
 title = "Citation Index"
-description = "For documentation only"
+description = "Citation only for an XML file"
 
 [[view_task_templates]]
 view_key = "citation"
@@ -23,30 +23,31 @@ flag_omit_when_null = false
 choice_fixed = false
 
 [[view_task_templates.task_template.args]]
-flag_joined = false
+flag = "--input-path="
+flag_joined = true
 flag_omit_when_null = false
 prompt = ""
 default = "workspace_file_path"
 choice_fixed = true
 choice_source = "workspace_file_path"
 choices = []
-#
-# [[view_task_templates.task_template.args]]
-# flag = "--exposure_id="
-# flag_joined = false
-# flag_omit_when_null = false
-# prompt = ""
-# default = "exposure_id"
-# choice_fixed = true
-# choice_source = "exposure_id"
-# choices = []
-#
-# [[view_task_templates.task_template.args]]
-# flag = "--exposure_path="
-# flag_joined = false
-# flag_omit_when_null = false
-# prompt = ""
-# default = "exposure_path"
-# choice_fixed = true
-# choice_source = "exposure_path"
-# choices = []
+
+[[view_task_templates.task_template.args]]
+flag = "--exposure-id="
+flag_joined = true
+flag_omit_when_null = false
+prompt = ""
+default = "exposure_id"
+choice_fixed = true
+choice_source = "exposure_id"
+choices = []
+
+[[view_task_templates.task_template.args]]
+flag = "--exposure-path="
+flag_joined = true
+flag_omit_when_null = false
+prompt = ""
+default = "exposure_file"
+choice_fixed = true
+choice_source = "exposure_file"
+choices = []
