Include tests and data for CellML
- This is largely copied from the Python package cellml.pmr2, along with
  an additional file that included multiple citations for testing.
- Certain modifications were made to the tested file for conformance to
  the RDFXML spec.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,5 +46,6 @@ jobs:
     - name: Run tests
       run: |
         cargo test --all-features
+        cargo test --package pmrbin --all-features
         cargo test --package pmrapp --features=hydrate
         cargo test --package pmrapp --features=ssr
