--- a/pmrapp/Cargo.toml
+++ b/pmrapp/Cargo.toml
@@ -44,7 +44,7 @@ serde_urlencoded = { workspace = true }
 stderrlog = { workspace = true, optional = true }
 tokio = { workspace = true, features = ["rt-multi-thread"], optional = true }
 tower = { workspace = true, features = ["util"], optional = true }
-tower-http = { workspace = true, features = ["fs"], optional = true }
+tower-http = { workspace = true, features = ["cors", "fs"], optional = true }
 tower-sessions = { workspace = true, optional = true }
 wasm-bindgen = { workspace = true }
 web-sys = { workspace = true, features = ["Document", "Event", "EventTarget", "Performance", "Window"] }
