--- a/Cargo.toml
+++ b/Cargo.toml
@@ -103,7 +103,10 @@ tokio = "1.35"
 tokio-stream = "0.1.5"
 tokio-util = "0.7.11"
 tower = "0.4"
+tower-cookies = "0.11.0"
 tower-http = "0.5"
+tower-layer = "0.3.2"
+tower-service = "0.3.2"
 tower-sessions = "0.14.0"
 tracing = "0.1"
 url = "2.5.4"
