--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,6 +70,6 @@ jobs:
     - name: Run tests
       run: |
         cargo test --all-features
-        cargo test --package pmrbin --all-features
+        cargo test --package pmrmeta --all-features
         cargo test --package pmrapp --features=hydrate
         cargo test --package pmrapp --features=ssr
