Include use of `axum-login-bearer`
- Now that the package is released, we may use it for the handling of
  bearer tokens.
- Existing implementation removed.
- Also need to readjust the sign-in function to only manage the bearer
  token only when available.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,6 +56,7 @@ async-trait = "0.1.50"
 axum = "0.8"
 axum-extra = "0.10.0"
 axum-login = "0.18.0"
+axum-login-bearer = "0.1.0"
 bytemuck = "1.19.0"
 casbin = "2.5.0"
 chrono = "0.4.31"
