--- a/Cargo.toml
+++ b/Cargo.toml
@@ -82,6 +82,7 @@ log = "0.4"
 mime_guess = "2.0.4"
 mockall = "0.10.2"
 num_enum = "0.6.1"
+oxiri = "0.2.11"
 oxigraph = { version = "0.5.2", default-features = false }
 parking_lot = "0.12"
 paw = "1.0"
