--- a/pmrmeta/Cargo.toml
+++ b/pmrmeta/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 anyhow = { workspace = true }
 clap = { workspace = true, features = ["derive", "env"] }
 dotenvy = { workspace = true }
+oxiri = { workspace = true }
 oxigraph = { workspace = true }
 pmrcore = { workspace = true }
 pmrctrl = { workspace = true }
