Flesh out the citation querying
- Again roughly based on cellml.pmr2, and it seems to work with some
  preliminary testing.
- Proper tests will need to be provided.

--- a/pmrmeta/Cargo.toml
+++ b/pmrmeta/Cargo.toml
@@ -13,6 +13,7 @@ pmrcore = { workspace = true }
 pmrctrl = { workspace = true }
 pmrdb = { workspace = true }
 pmrmodel = { workspace = true }
+serde = { workspace = true }
 stderrlog = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true, features = ["sync", "fs"] }
