Tests for querying of citation.

--- a/pmrmeta/Cargo.toml
+++ b/pmrmeta/Cargo.toml
@@ -19,6 +19,9 @@ thiserror = { workspace = true }
 tokio = { workspace = true, features = ["sync", "fs"] }
 xee-xpath = { workspace = true }
 
+[dev-dependencies]
+serde_json = { workspace = true }
+
 [features]
 sqlite = [
     "pmrctrl/sqlite",
