First cut with the new cmeta tool
- Not only generates the expected notes compatible file, it will also
  include all citations and add relevant details to the catalog.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ default-members = [
     "pmrcore",
     "pmrdb",
     "pmrdb_sqlite",
+    "pmrmeta",
     "pmrmodel",
     "pmrrbac",
     "pmrrepo",
